[tool.poetry]
name = "givenpy"
version = "1.0.0"
description = "A simple micro BDD framework for Python"
authors = ["Tadas Subonis <tadas.subonis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pyhamcrest = "^2.0.4"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
