[tool.poetry]
name = "givenpy"
version = "1.0.3"
description = "A simple micro BDD framework for Python"
authors = ["Tadas Subonis <tadas.subonis@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

keywords = ["BDD", "testing", "micro", "framework", "test", "unittest"]

documentation = "https://github.com/tadas-subonis/givenpy"
repository = "https://github.com/tadas-subonis/givenpy"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tadas-subonis/givenpy/issues"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pyhamcrest = "^2.0.4"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
